--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9458,5 +9458,15 @@
         <target>Acercas la sustancia a tu nariz y la hueles un poco... Puajjj! Parece que podría matar incluso a un caballo.</target>
       </segment>
     </unit>
+    <unit id="Dkrg9_A">
+      <notes>
+        <note category="german">So viel zum Survivalbuch. Kein Wunder, dass dieses Buch nicht über die Grundstufe hinausgekommen ist... Du hast absolut nichts gefunden, aber das wusstest du wahrscheinlich schon.</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
+      </notes>
+      <segment>
+        <source>So viel zum Survivalbuch. Kein Wunder, dass dieses Buch nicht über die Grundstufe hinausgekommen ist... Du hast absolut nichts gefunden, aber das wusstest du wahrscheinlich schon.</source>
+        <target>Pudo haber sido un libro de supervivencia o un manual de estrategia anti-zombies; pero es solo un curso de bordado... Nada que te pueda servir.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
