--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9484,5 +9484,15 @@
         <target>La fiole contient du sang infecté et quelques autres produits. reste à trouver un truc comestible dans lequel la verser.</target>
       </segment>
     </unit>
+    <unit id="Dkrg9_A">
+      <notes>
+        <note category="german">So viel zum Survivalbuch. Kein Wunder, dass dieses Buch nicht über die Grundstufe hinausgekommen ist... Du hast absolut nichts gefunden, aber das wusstest du wahrscheinlich schon.</note>
+        <note category="from">php:///src/Service/ActionHandler.php</note>
+      </notes>
+      <segment>
+        <source>So viel zum Survivalbuch. Kein Wunder, dass dieses Buch nicht über die Grundstufe hinausgekommen ist... Du hast absolut nichts gefunden, aber das wusstest du wahrscheinlich schon.</source>
+        <target>Tu parles d'un livre de survie. Rien d'étonnant qu'avec ce guide les castors n'aient pas pu dépasser le stade de juniors... Vous n'avez strictement rien trouvé, mais ça vous l'aviez compris.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
