--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -1700,7 +1700,7 @@
       </notes>
       <segment>
         <source>Wir sollten mehr Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</source>
-        <target>Necesitamos crear más defensas. Si faltan recursos, ve al Ultramundo (el desierto fuera de la ciudad) y búscalos ahí.</target>
+        <target>Necesitamos crear más defensas. Si faltan recursos, ve al Ultramundo (el desierto fuera del pueblo) y búscalos ahí.</target>
       </segment>
     </unit>
     <unit id="6gPmw1f">
