ES Correction (Withdrawal death)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -3901,7 +3901,7 @@
       </notes>
       <segment>
         <source>Drogenabhängigkeit</source>
-        <target>Drogadicción</target>
+        <target>Falta de estimulantes</target>
       </segment>
     </unit>
     <unit id="Ms3Esea">
@@ -3911,7 +3911,7 @@
       </notes>
       <segment>
         <source>Drogen sind echt was Tolles, solange du genügend hast. Wenn sie dir aber ausgehen, sieht's schon anders aus... Schweißausbrüche, Panikattacken, Zittern... du rennst alle zehn Minuten aufs Klo, um dich zu übergeben. Am Ende, wenn du deinen Verstand bereits verloren hast, schluckst du dann Steine, weil du sie mit Steroiden verwechselst.</source>
-        <target>Las drogas son excelentes siempre que tenga suficiente. Pero si te quedas sin ellos, las cosas se verán diferentes... sudores, ataques de pánico, temblores... corres al baño cada diez minutos a vomitar. Al final, cuando ya te has vuelto loco, terminas tragando piedras por confundirlas con esteroides.</target>
+        <target>Las drogas son excelentes siempre que tengas suficiente. Pero si te quedas sin ellas, las cosas dejan de ser tan alegres... Empiezas a sudar, te dan escalofríos, ataques de pánico... corres al baño cada diez minutos a vomitar. Al final, cuando ya te has vuelto completamente loco, terminas tragando unas piedritas que confundiste con esteroides.</target>
       </segment>
     </unit>
     <unit id="Ds74xh4">
