--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4255,22 +4255,22 @@
       <notes>
         <note category="german">Ankündigungen</note>
         <note category="from">twig:///templates/ajax/pm/view.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ankündigungen</source>
-        <target>Ankündigungen</target>
+        <target>Annonces</target>
       </segment>
     </unit>
     <unit id="7VfCrWl" name="Foren">
       <notes>
         <note category="german">Foren</note>
         <note category="from">twig:///templates/ajax/pm/view.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Foren</source>
-        <target>Foren</target>
+        <target>Forum</target>
       </segment>
     </unit>
   </file>
