ES Correction (Buttons during attack) Added [] to clarify the PM button isn't a zombie_attack-related action

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22509,7 +22509,7 @@
       </notes>
       <segment>
         <source>Funkgerät verwenden</source>
-        <target>Abrir la mensajería</target>
+        <target>[Abrir la mensajería]</target>
       </segment>
     </unit>
     <unit id="ZUcAy0O" name="Gebäudeliste einblenden">
