ES Correction (low % on Watchtower)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -20897,7 +20897,7 @@
       </notes>
       <segment>
         <source>Unsere aktuelle Schätzung ist zu ungenau, um brauchbar zu sein: Wir brauchen mehr Bürger, die auf den Turm gehen!</source>
-        <target>Nuestra estimación actual es demasiado imprecisa para ser útil: ¡necesitamos más habitantes para subir a la torre!</target>
+        <target>Nuestros cálculos actuales son poco fiables. ¡Necesitamos más gente en la torre de vigilancia!</target>
       </segment>
     </unit>
     <unit id="gZG1unt">
